--- a/FoodbLog/.gitignore
+++ b/FoodbLog/.gitignore
@@ -43,7 +43,7 @@ Pods/
 
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
-# *.xcworkspace
+*.xcworkspace
 
 # Carthage
 #
