--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-FoodbLog filter=lfs diff=lfs merge=lfs -text
-*.gitattributes filter=lfs diff=lfs merge=lfs -text
-*.gif filter=lfs diff=lfs merge=lfs -text
+# FoodbLog filter=lfs diff=lfs merge=lfs -text
+# *.gitattributes filter=lfs diff=lfs merge=lfs -text
+# *.gif filter=lfs diff=lfs merge=lfs -text
